code/python/NaturalLanguageProcessing/v0/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Natural Language Processing client library for Python

[![API Version](https://img.shields.io/badge/api-v0.0.0-blue)](https://developer.factset.com/api-catalog/natural-language-processing-api)
[![PyPi](https://img.shields.io/pypi/v/fds.sdk.NaturalLanguageProcessing/0.40.0)](https://pypi.org/project/fds.sdk.NaturalLanguageProcessing/v/0.40.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Identify and extract named entities from unstructured or semi-structured text.

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 0.0.0
- SDK version: 0.40.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Python >= 3.7

## Installation

### Poetry

```shell
poetry add fds.sdk.utils fds.sdk.NaturalLanguageProcessing==0.40.0
```

### pip

```shell
pip install fds.sdk.utils fds.sdk.NaturalLanguageProcessing==0.40.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Python environment.
   1. Install and activate python 3.10+. If you're using [pyenv](https://github.com/pyenv/pyenv):

      ```sh
      pyenv install 3.10.0
      pyenv shell 3.10.0
      ```

   2. (optional) [Install poetry](https://python-poetry.org/docs/#installation).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```python
from fds.sdk.utils.authentication import ConfidentialClient

import fds.sdk.NaturalLanguageProcessing
from fds.sdk.NaturalLanguageProcessing.api import advanced_api
from fds.sdk.NaturalLanguageProcessing.models import *
from dateutil.parser import parse as dateutil_parser
from pprint import pprint

# See configuration.py for a list of all supported configuration parameters.

# Examples for each supported authentication method are below,
# choose one that satisfies your use case.

# (Preferred) OAuth 2.0: FactSetOAuth2
# See https://github.com/FactSet/enterprise-sdk#oauth-20
# for information on how to create the app-config.json file
#
# The confidential client instance should be reused in production environments.
# See https://github.com/FactSet/enterprise-sdk-utils-python#authentication
# for more information on using the ConfidentialClient class
configuration = fds.sdk.NaturalLanguageProcessing.Configuration(
    fds_oauth_client=ConfidentialClient('/path/to/app-config.json')
)

# Basic authentication: FactSetApiKey
# See https://github.com/FactSet/enterprise-sdk#api-key
# for information how to create an API key
# configuration = fds.sdk.NaturalLanguageProcessing.Configuration(
#     username='USERNAME-SERIAL',
#     password='API-KEY'
# )

# Enter a context with an instance of the API client
with fds.sdk.NaturalLanguageProcessing.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = advanced_api.AdvancedApi(api_client)
    advanced_request_root = AdvancedRequestRoot(
        data=AdvancedInput(
            input_data="input_data_example",
            required_entities=[
                AdvancedEntityType("person"),
            ],
            offset_required=True,
            lookup_required=True,
            model="meta.llama-4-scout-instruct",
        ),
    ) # AdvancedRequestRoot | 
    model = "meta.llama-4-scout-instruct" # str | Optional override for the Advanced model backend. (optional) if omitted the server will use the default value of "meta.llama-4-scout-instruct"

    try:
        # Advanced Processing
        # example passing only required values which don't have defaults set
        # and optional values
        api_response = api_instance.post_advanced_ner_extraction(advanced_request_root, model=model)

        pprint(api_response)
    except fds.sdk.NaturalLanguageProcessing.ApiException as e:
        print("Exception when calling AdvancedApi->post_advanced_ner_extraction: %s\n" % e)

    # # Get response, http status code and response headers
    # try:
    #     # Advanced Processing
    #     api_response, http_status_code, response_headers = api_instance.post_advanced_ner_extraction_with_http_info(advanced_request_root, model=model)


    #     pprint(api_response)
    #     pprint(http_status_code)
    #     pprint(response_headers)
    # except fds.sdk.NaturalLanguageProcessing.ApiException as e:
    #     print("Exception when calling AdvancedApi->post_advanced_ner_extraction: %s\n" % e)

    # # Get response asynchronous
    # try:
    #     # Advanced Processing
    #     async_result = api_instance.post_advanced_ner_extraction_async(advanced_request_root, model=model)
    #     api_response = async_result.get()


    #     pprint(api_response)
    # except fds.sdk.NaturalLanguageProcessing.ApiException as e:
    #     print("Exception when calling AdvancedApi->post_advanced_ner_extraction: %s\n" % e)

    # # Get response, http status code and response headers asynchronous
    # try:
    #     # Advanced Processing
    #     async_result = api_instance.post_advanced_ner_extraction_with_http_info_async(advanced_request_root, model=model)
    #     api_response, http_status_code, response_headers = async_result.get()


    #     pprint(api_response)
    #     pprint(http_status_code)
    #     pprint(response_headers)
    # except fds.sdk.NaturalLanguageProcessing.ApiException as e:
    #     print("Exception when calling AdvancedApi->post_advanced_ner_extraction: %s\n" % e)

```

### Using Pandas

To convert an API response to a Pandas DataFrame, it is necessary to transform it first to a dictionary.
```python
import pandas as pd

response_dict = api_response.to_dict()['data']

simple_json_response = pd.DataFrame(response_dict)
nested_json_response = pd.json_normalize(response_dict)
```

### Debugging

The SDK uses the standard library [`logging`](https://docs.python.org/3/library/logging.html#module-logging) module.

Setting `debug` to `True` on an instance of the `Configuration` class sets the log-level of related packages to `DEBUG`
and enables additional logging in Pythons [HTTP Client](https://docs.python.org/3/library/http.client.html).

**Note**: This prints out sensitive information (e.g. the full request and response). Use with care.

```python
import logging
import fds.sdk.NaturalLanguageProcessing

logging.basicConfig(level=logging.DEBUG)

configuration = fds.sdk.NaturalLanguageProcessing.Configuration(...)
configuration.debug = True
```

### Configure a Proxy

You can pass proxy settings to the Configuration class:

* `proxy`: The URL of the proxy to use.
* `proxy_headers`: a dictionary to pass additional headers to the proxy (e.g. `Proxy-Authorization`).

```python
import fds.sdk.NaturalLanguageProcessing

configuration = fds.sdk.NaturalLanguageProcessing.Configuration(
    # ...
    proxy="http://secret:password@localhost:5050",
    proxy_headers={
        "Custom-Proxy-Header": "Custom-Proxy-Header-Value"
    }
)
```

### Custom SSL Certificate

TLS/SSL certificate verification can be configured with the following Configuration parameters:

* `ssl_ca_cert`: a path to the certificate to use for verification in `PEM` format.
* `verify_ssl`: setting this to `False` disables the verification of certificates.
  Disabling the verification is not recommended, but it might be useful during
  local development or testing.

```python
import fds.sdk.NaturalLanguageProcessing

configuration = fds.sdk.NaturalLanguageProcessing.Configuration(
    # ...
    ssl_ca_cert='/path/to/ca.pem'
)
```

### Request Retries

In case the request retry behaviour should be customized, it is possible to pass a `urllib3.Retry` object to the `retry` property of the Configuration.

```python
from urllib3 import Retry
import fds.sdk.NaturalLanguageProcessing

configuration = fds.sdk.NaturalLanguageProcessing.Configuration(
    # ...
)

configuration.retries = Retry(total=3, status_forcelist=[500, 502, 503, 504])
```


## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/aiml/ner/v0*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*AdvancedApi* | [**post_advanced_ner_extraction**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/NaturalLanguageProcessing/v0/docs/AdvancedApi.md#post_advanced_ner_extraction) | **POST** /advanced | Advanced Processing
*ExpressApi* | [**post_express_ner_extraction**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/NaturalLanguageProcessing/v0/docs/ExpressApi.md#post_express_ner_extraction) | **POST** /express | Express Processing


## Documentation For Models

 - [AdvancedEntityType](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/NaturalLanguageProcessing/v0/docs/AdvancedEntityType.md)
 - [AdvancedInput](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/NaturalLanguageProcessing/v0/docs/AdvancedInput.md)
 - [AdvancedRequestRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/NaturalLanguageProcessing/v0/docs/AdvancedRequestRoot.md)
 - [EntityData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/NaturalLanguageProcessing/v0/docs/EntityData.md)
 - [ErrorResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/NaturalLanguageProcessing/v0/docs/ErrorResponse.md)
 - [ErrorSource](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/NaturalLanguageProcessing/v0/docs/ErrorSource.md)
 - [ExpressInput](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/NaturalLanguageProcessing/v0/docs/ExpressInput.md)
 - [ExpressRequestRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/NaturalLanguageProcessing/v0/docs/ExpressRequestRoot.md)
 - [HTTPError](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/NaturalLanguageProcessing/v0/docs/HTTPError.md)
 - [LookupStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/NaturalLanguageProcessing/v0/docs/LookupStatus.md)
 - [OutputItem](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/NaturalLanguageProcessing/v0/docs/OutputItem.md)
 - [OutputRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/NaturalLanguageProcessing/v0/docs/OutputRoot.md)
 - [StandardEntityType](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/NaturalLanguageProcessing/v0/docs/StandardEntityType.md)


## Documentation For Authorization


## FactSetApiKey

- **Type**: HTTP basic authentication


## FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Notes for Large OpenAPI documents
If the OpenAPI document is large, imports in fds.sdk.NaturalLanguageProcessing.apis and fds.sdk.NaturalLanguageProcessing.models may fail with a
RecursionError indicating the maximum recursion limit has been exceeded. In that case, there are a couple of solutions:

Solution 1:
Use specific imports for apis and models like:
- `from fds.sdk.NaturalLanguageProcessing.api.default_api import DefaultApi`
- `from fds.sdk.NaturalLanguageProcessing.model.pet import Pet`

Solution 2:
Before importing the package, adjust the maximum recursion limit as shown below:
```
import sys
sys.setrecursionlimit(1500)
import fds.sdk.NaturalLanguageProcessing
from fds.sdk.NaturalLanguageProcessing.apis import *
from fds.sdk.NaturalLanguageProcessing.models import *
```

## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

